Fix image file extensions from JPEG to jpeg

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:wght@300;600&display=swap" rel="stylesheet">
     <meta property="og:title" content="A surprise for you..." />
     <meta property="og:description" content="Counting down the seconds ❤️" />
-    <meta property="og:image" content="photo1.JPEG" />
+    <meta property="og:image" content="photo1.jpeg" />
 </head>
 <body>
     <div class="main-content">
@@ -35,11 +35,11 @@
 
         <div class="gallery">
             <div class="polaroid left">
-                <img src="photo1.JPEG" alt="Memory 1">
+                <img src="photo1.jpeg" alt="Memory 1">
                 <div class="caption">Us ❤️</div>
             </div>
             <div class="polaroid right">
-                <img src="photo2.JPEG" alt="Memory 2">
+                <img src="photo2.jpeg" alt="Memory 2">
                 <div class="caption">Always ✨</div>
             </div>
         </div>
